Fix for multiple accessibility layout tests in isolated tree mode. https://bugs.webkit.org/show_bug.cgi?id=217745

Reviewed by Chris Fleizach.

Source/WebCore:

Fix for the following tests in accessibility isolated tree mode:
accessibility/mac/abbr-acronym-tags.html
accessibility/mac/aria-image-emits-object-replacement.html
accessibility/mac/attributed-string-includes-highlighting.html
accessibility/mac/attributed-string/attributed-string-for-range-with-options.html
accessibility/mac/attributed-string/attributed-string-for-range.html
accessibility/mac/character-offset-visible-position-conversion-with-emoji.html
accessibility/mac/element-for-text-marker.html
accessibility/mac/listmarker-suffix.html
accessibility/mac/media-emits-object-replacement.html
accessibility/mac/stale-textmarker-crash.html
accessibility/mac/string-range-contains-listmarker.html
accessibility/mac/text-marker-for-index.html
accessibility/mac/text-marker-length.html
accessibility/mac/text-marker-paragraph-nav.html
accessibility/mac/text-marker-range-for-node-without-children.html
accessibility/mac/text-marker-sentence-nav.html
accessibility/mac/text-marker-word-nav-collapsed-whitespace.html
accessibility/mac/text-marker-word-nav.html
accessibility/mac/text-markers-for-input-with-placeholder.html
accessibility/mac/webkit-scrollarea-position.html
accessibility/text-marker/text-marker-previous-next.html
accessibility/text-marker/text-marker-range-stale-node-crash.html
accessibility/text-marker/text-marker-range-with-removed-node-crash.html
accessibility/text-marker/text-marker-with-user-select-none.html

* accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::convertFrameToSpace const):
(WebCore::AXIsolatedObject::elementRange const):
* accessibility/isolatedtree/AXIsolatedObject.h:
* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper position]):

LayoutTests:

* accessibility/mac/attributed-string-includes-highlighting.html: Minor code cleanup.


Canonical link: https://commits.webkit.org/230504@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268541 268f45cc-cd09-0410-ab3c-d52691b4dbfc